--- a/.github/workflows/auto-bing.yml
+++ b/.github/workflows/auto-bing.yml
@@ -5,10 +5,9 @@ on:
   schedule:
     - cron: "0 1 * * *"
   push:
-    branches: [ gh-pages ]
+    branches: [ main ]
   pull_request:
-    branches: [ gh-pages ]
-
+    branches: [ main ]
 jobs:
   build:
     runs-on: ubuntu-latest
